fix(48): revise plans based on checker feedback

--- a/.planning/phases/48-infrastructure-foundation/48-01-PLAN.md
+++ b/.planning/phases/48-infrastructure-foundation/48-01-PLAN.md
@@ -12,7 +12,7 @@ files_modified:
   - src/layouts/EDALayout.astro
   - src/components/eda/EdaBreadcrumb.astro
   - src/components/eda/TechniquePage.astro
-  - src/pages/eda/test-formulas.astro
+  - src/pages/eda/test-formulas.mdx
 autonomous: true
 requirements:
   - INFRA-01
@@ -42,8 +42,8 @@ must_haves:
     - path: "src/components/eda/TechniquePage.astro"
       provides: "Technique page template with named slots"
       contains: "slot name=\"plot\""
-    - path: "src/pages/eda/test-formulas.astro"
-      provides: "KaTeX validation page with 10+ formula categories"
+    - path: "src/pages/eda/test-formulas.mdx"
+      provides: "KaTeX validation page with 10+ formula categories using real remark-math + rehype-katex pipeline"
       contains: "\\sum_{i=1}"
     - path: "public/styles/katex.min.css"
       provides: "Self-hosted KaTeX CSS with patched font paths"
@@ -60,10 +60,10 @@ must_haves:
       to: "src/layouts/Layout.astro"
       via: "import and slot composition"
       pattern: "import Layout from.*Layout.astro"
-    - from: "src/pages/eda/test-formulas.astro"
-      to: "src/layouts/EDALayout.astro"
-      via: "layout import with useKatex=true"
-      pattern: "useKatex.*true"
+    - from: "src/pages/eda/test-formulas.mdx"
+      to: "remark-math + rehype-katex"
+      via: "MDX pipeline processes $...$ and $$...$$ syntax through remark-math into rehype-katex"
+      pattern: "\\$\\$.*\\$\\$"
     - from: "src/components/eda/TechniquePage.astro"
       to: "src/layouts/EDALayout.astro"
       via: "layout wrapper"
@@ -147,7 +147,7 @@ IMPORTANT: Do NOT load KaTeX CSS globally in Layout.astro. It will be conditiona
     src/layouts/EDALayout.astro
     src/components/eda/EdaBreadcrumb.astro
     src/components/eda/TechniquePage.astro
-    src/pages/eda/test-formulas.astro
+    src/pages/eda/test-formulas.mdx
   </files>
   <action>
 1. Create `src/layouts/EDALayout.astro`:
@@ -177,11 +177,12 @@ IMPORTANT: Do NOT load KaTeX CSS globally in Layout.astro. It will be conditiona
    - Named slots: `plot`, `description`, `formula`, `code`, `interpretation`
    - Related techniques section (conditionally rendered if array non-empty): pill-shaped links to `/eda/techniques/{slug}/`
 
-4. Create `src/pages/eda/test-formulas.astro`:
-   - Import EDALayout (NOT Layout.astro)
-   - Set `useKatex={true}`
+4. Create `src/pages/eda/test-formulas.mdx` (MDX format to exercise the real remark-math + rehype-katex pipeline):
+   - Import EDALayout from the layouts directory
+   - Use EDALayout as the wrapper with `useKatex={true}`
    - Title: "KaTeX Formula Test | EDA Visual Encyclopedia"
-   - Include ALL 11 formula categories from the research test page pattern:
+   - Use standard MDX `$...$` for inline math and `$$...$$` for display math — these are processed by the remark-math + rehype-katex pipeline configured in astro.config.mjs
+   - Include ALL 11 formula categories:
      1. Greek Symbols (inline): `$\alpha, \beta, \gamma, \delta, \sigma, \mu, \lambda, \chi^2$`
      2. Fractions: `$$\frac{x + y}{z - w}$$`
      3. Summations: `$$\sum_{i=1}^{n} x_i$$`
@@ -193,17 +194,16 @@ IMPORTANT: Do NOT load KaTeX CSS globally in Layout.astro. It will be conditiona
      9. Multi-line Aligned: `$$\begin{aligned} ... \end{aligned}$$`
      10. Chi-Squared Test: `$$\chi^2 = \sum_{i=1}^k \frac{(O_i - E_i)^2}{E_i}$$`
      11. Product/Large Operators: `$$L(\theta) = \prod_{i=1}^n f(x_i | \theta)$$`
-   - IMPORTANT: Since this is a `.astro` file (not MDX), KaTeX rendering via remark-math won't process raw `$...$` in the template. Instead, use `katex.renderToString()` in the frontmatter to pre-render each formula, then inject the HTML with `set:html`. Import `katex` from `'katex'` in the frontmatter script. This approach guarantees formula rendering works regardless of MDX pipeline.
-   - Alternatively, create this as `test-formulas.mdx` in `src/pages/eda/` and use the MDX pipeline directly with `$...$` syntax. This tests the actual remark-math + rehype-katex pipeline that content pages will use. PREFER this approach as it validates the real pipeline.
    - Wrap in prose styling: `class="prose prose-lg dark:prose-invert max-w-3xl mx-auto px-4 py-16"`
+   - IMPORTANT: This MUST be .mdx (not .astro) so remark-math + rehype-katex process the `$...$` syntax. This validates the real pipeline that all future content pages will use (INFRA-01).
 
 5. Run build and verify the test page renders without errors. If `mathFlowInside` error occurs, execute the fallback: `npm install remark-math@5.1.1 rehype-katex@6.0.3` and rebuild.
   </action>
   <verify>
     <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npm run build 2>&1 | tail -20 && ls -la dist/eda/test-formulas/index.html && grep -c "katex" dist/eda/test-formulas/index.html</automated>
-    <manual>Build succeeds. dist/eda/test-formulas/index.html exists and contains multiple "katex" class references (pre-rendered formula HTML). Open in browser to verify all 11 formula categories render correctly with proper symbols, not raw LaTeX.</manual>
+    <manual>Build succeeds. dist/eda/test-formulas/index.html exists and contains multiple "katex" class references (pre-rendered formula HTML from the remark-math + rehype-katex pipeline). Open in browser to verify all 11 formula categories render correctly with proper symbols, not raw LaTeX.</manual>
   </verify>
-  <done>EDALayout.astro conditionally loads KaTeX CSS. EdaBreadcrumb renders EDA > Category > Technique navigation. TechniquePage.astro has all named slots. Test page at /eda/test-formulas/ renders 11 KaTeX formula categories (Greek, fractions, summations, integrals, roots, matrices, sub/superscripts, normal PDF, aligned equations, chi-squared, products) without build errors.</done>
+  <done>EDALayout.astro conditionally loads KaTeX CSS. EdaBreadcrumb renders EDA > Category > Technique navigation. TechniquePage.astro has all named slots. Test page at /eda/test-formulas/ is an MDX file that exercises the real remark-math + rehype-katex pipeline, rendering 11 KaTeX formula categories (Greek, fractions, summations, integrals, roots, matrices, sub/superscripts, normal PDF, aligned equations, chi-squared, products) without build errors.</done>
 </task>
 
 </tasks>
