--- a/.planning/phases/48-infrastructure-foundation/48-02-PLAN.md
+++ b/.planning/phases/48-infrastructure-foundation/48-02-PLAN.md
@@ -20,7 +20,7 @@ must_haves:
   truths:
     - "Content collections accept a sample technique entry through Zod validation without errors"
     - "Content collections accept a sample distribution entry through Zod validation without errors"
-    - "OG image caching computes deterministic hashes and skips regeneration for unchanged content"
+    - "OG cache utility computes deterministic hashes and exposes getOrGenerateOgImage for Phase 55 endpoints"
     - "Three content collections (edaTechniques, edaDistributions, edaPages) are registered in content.config.ts"
   artifacts:
     - path: "src/lib/eda/schema.ts"
@@ -28,7 +28,7 @@ must_haves:
       exports: ["edaTechniqueSchema", "edaDistributionSchema", "tierSchema", "EdaTechnique", "EdaDistribution"]
     - path: "src/lib/eda/og-cache.ts"
       provides: "Content-hash OG image caching utility"
-      exports: ["computeOgHash", "getCachedOgImage", "cacheOgImage"]
+      exports: ["computeOgHash", "getCachedOgImage", "cacheOgImage", "getOrGenerateOgImage"]
     - path: "src/data/eda/techniques.json"
       provides: "Sample technique entries (2-3 entries for validation)"
       contains: "histogram"
@@ -181,7 +181,7 @@ Output: Zod schemas (EdaTechnique, EdaDistribution), three registered content co
 
 5. Export `getOrGenerateOgImage(title: string, description: string, generateFn: () => Promise<Buffer>): Promise<Buffer>`:
    - Convenience wrapper: computes hash, checks cache, generates if missing, caches result
-   - This is the function OG image endpoints will call
+   - This is the function OG image endpoints will call in Phase 55
 
 6. Create `public/open-graph/eda/.gitkeep` to ensure the cache directory is tracked by git (the actual PNG cache files should be gitignored — add `public/open-graph/eda/*.png` to `.gitignore`).
 
@@ -190,10 +190,10 @@ Output: Zod schemas (EdaTechnique, EdaDistribution), three registered content co
 IMPORTANT: This utility runs at build time only (Node.js APIs). It is NOT a client-side module.
   </action>
   <verify>
-    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && node -e "const { computeOgHash } = require('./src/lib/eda/og-cache.ts'); console.log('hash:', computeOgHash('test', 'desc'));" 2>/dev/null || node --import tsx -e "import { computeOgHash } from './src/lib/eda/og-cache.ts'; console.log('hash:', computeOgHash('test', 'desc'));" 2>/dev/null || npx tsx -e "import { computeOgHash } from './src/lib/eda/og-cache.ts'; console.log('hash:', computeOgHash('test', 'desc'));"</automated>
-    <manual>computeOgHash returns a 12-character hex string. Same inputs produce same output (deterministic). Different inputs produce different output.</manual>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx tsx -e "import { computeOgHash, getOrGenerateOgImage } from './src/lib/eda/og-cache.ts'; const h1 = computeOgHash('test', 'desc'); const h2 = computeOgHash('test', 'desc'); const h3 = computeOgHash('other', 'desc'); console.log('hash length:', h1.length); console.log('deterministic:', h1 === h2); console.log('unique:', h1 !== h3); console.log('getOrGenerateOgImage exported:', typeof getOrGenerateOgImage === 'function');"</automated>
+    <manual>computeOgHash returns a 12-character hex string. Same inputs produce same output (deterministic). Different inputs produce different output. getOrGenerateOgImage is exported as a function.</manual>
   </verify>
-  <done>OG cache utility exports computeOgHash, getCachedOgImage, cacheOgImage, and getOrGenerateOgImage. Hash is deterministic (same title+description = same hash). Cache version included in hash for invalidation. .gitignore updated to exclude cached PNGs.</done>
+  <done>OG cache utility exports computeOgHash, getCachedOgImage, cacheOgImage, and getOrGenerateOgImage. Hash is deterministic (same title+description = same hash). Cache version included in hash for invalidation. getOrGenerateOgImage is ready for Phase 55 OG image endpoints. .gitignore updated to exclude cached PNGs.</done>
 </task>
 
 </tasks>
@@ -213,7 +213,7 @@ IMPORTANT: This utility runs at build time only (Node.js APIs). It is NOT a clie
 - Three content collections registered and validated with sample data
 - Zod schemas cover all fields from the research specification
 - Existing content collections (blog, languages, dbModels) unaffected
-- OG cache utility produces deterministic hashes with version salt
+- OG cache utility produces deterministic hashes with version salt and exposes getOrGenerateOgImage for Phase 55
 - Build succeeds with all collections loaded
 </success_criteria>
 
