--- a/.planning/phases/48-infrastructure-foundation/48-03-PLAN.md
+++ b/.planning/phases/48-infrastructure-foundation/48-03-PLAN.md
@@ -5,6 +5,7 @@ type: execute
 wave: 2
 depends_on:
   - 48-01
+  - 48-02
 files_modified:
   - package.json
   - astro.config.mjs
@@ -61,6 +62,7 @@ Output: D3 micro-modules installed, bundle analysis proving isolation, navigatio
 @.planning/STATE.md
 @.planning/phases/48-infrastructure-foundation/48-RESEARCH.md
 @.planning/phases/48-infrastructure-foundation/48-01-SUMMARY.md
+@.planning/phases/48-infrastructure-foundation/48-02-SUMMARY.md
 
 @astro.config.mjs
 @src/layouts/EDALayout.astro
@@ -177,19 +179,18 @@ Output: D3 micro-modules installed, bundle analysis proving isolation, navigatio
    - Run `npm run build`
    - After verification, REMOVE the visualizer from astro.config.mjs (it's a dev-time analysis tool, not needed in production builds). The plugin and package stay installed for future use.
 
-7. After build, verify D3 isolation:
+7. After build, verify D3 isolation using stats.html (which retains original module names even after Rollup minification):
    - Check `dist/stats.html` — search for `d3-scale`, `d3-shape`, `d3-axis`, `d3-selection` in the treemap
    - They must appear ONLY in chunks associated with the test-d3-isolation page, NOT in shared chunks
    - Check that `dist/eda/test-formulas/index.html` does NOT contain any d3 chunk references (the KaTeX-only test page must not load D3)
-   - Alternative CLI check: `grep -r "d3-scale\|d3-shape\|d3-axis\|d3-selection" dist/_astro/ --include="*.js" -l` to identify which JS chunks contain D3 code — should be exactly 1 chunk
 
 8. After verification, remove visualizer from astro.config.mjs (revert the vite.plugins addition). Keep the npm package installed for future INFRA-11 re-verification.
   </action>
   <verify>
-    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npm run build 2>&1 | tail -10 && echo "--- D3 chunk count ---" && grep -rl "d3-selection\|d3Selection" dist/_astro/ --include="*.js" 2>/dev/null | wc -l && echo "--- KaTeX test page D3 check ---" && grep -c "d3" dist/eda/test-formulas/index.html 2>/dev/null || echo "0"</automated>
-    <manual>Build succeeds. D3 modules appear in exactly 1 JS chunk (the distribution stub island). The KaTeX test page (test-formulas) has 0 references to D3 chunks. stats.html treemap confirms isolation.</manual>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npm run build 2>&1 | tail -10 && echo "--- D3 module count in stats.html ---" && grep -c '"d3-selection"' dist/stats.html && echo "--- KaTeX test page D3 check ---" && grep -c "d3" dist/eda/test-formulas/index.html 2>/dev/null || echo "0"</automated>
+    <manual>Build succeeds. stats.html contains d3-selection references (proving D3 was bundled). The KaTeX test page (test-formulas) has 0 references to D3 chunks. stats.html treemap confirms D3 modules are isolated to the distribution stub chunk only.</manual>
   </verify>
-  <done>D3 micro-modules installed (6 runtime + 6 type packages). Bundle analysis confirms D3 code appears in exactly 1 JS chunk loaded only by the distribution test page. Non-distribution EDA pages load zero D3 code. Visualizer removed from production config after verification.</done>
+  <done>D3 micro-modules installed (6 runtime + 6 type packages). Bundle analysis via stats.html confirms D3 code appears in exactly 1 JS chunk loaded only by the distribution test page. Non-distribution EDA pages load zero D3 code. Visualizer removed from production config after verification.</done>
 </task>
 
 <task type="checkpoint:human-verify" gate="blocking">
